testsuite/tests/indexed-types/should_fail/ExpandTFs.stderr

ExpandTFs.hs:9:52: error:
    • Couldn't match kind ‘()’ with ‘Maybe String’
      Expected kind ‘Maybe (Foo Int)’, but ‘'()’ has kind ‘()’
    • In the type ‘'()’
      In the type family declaration for ‘Bar’
